--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Index</h1>
+<h1>List of plays</h1>
+
+<% @plays each do |play| %>
+<h2><%= link_to play.title, play_path(play) %></h2>
+<%= link_to "Add Play", new_play path %>
