--- a/app/views/plays/edit.html.erb
+++ b/app/views/plays/edit.html.erb
@@ -1,3 +1,7 @@
 <h1>Edit Broadway</h1>
 
 <%= render 'form' %>
+
+<%= link_to "Back", root_path %>
+<%= link_to "Edit", edit_play_path(@play) %>
+<%= link_to "Delete", play_path(@play), method: :delete %>
