--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Broadway</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Broadway</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<div class="navbar-header">
+				<%= link_to "Broadway", root_path, class: "navbar-brand"  %>
+			</div>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+			<ul class="nav navbar-nav navbar-right">
+				<% if user_signed_in? %>
+					<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+				<% else %>
+					<li><%= link_to "Sign Up", new_user_registration_path %></li>
+					<li><%= link_to "Log In", new_user_session_path %></li>
+				<% end %>
+			</ul>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-<div class="container">
-    <%= yield %>
-    </div>
-  </body>
+			<ul class="nav navbar-nav">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Genres <span class="caret"></span></a>
+
+					<ul class="dropdown-menu" role="menu">
+						<% Category.all.each do |category| %>
+							<li class="<%= 'active' if params[:category] == category.name %>">
+								<%= link_to category.name, plays_path(category: category.name), class: "link" %>
+							</li>
+						<% end %>	
+					</ul>
+				</li>
+
+				<% if user_signed_in? %>
+					<li><%= link_to "Add Play", new_play_path %></li>
+				<% end %>
+			</ul>
+		</div>
+	</nav>
+
+
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
+
+	<div class="container">
+		<%= yield %>
+	</div>
+
+</body>
 </html>
