--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -1,3 +1,12 @@
 <h2><%= play.title %></h2>
 <h3><%= play.description %></h3>
 <p><%= play.director %></p>
+
+<div class="links btn-group">
+	<% if user_signed_in? %>
+		<% if @play.user_id == current_user.id %>
+			<%= link_to "Edit", edit_play_path(@play), class: "btn btn-custom" %>
+			<%= link_to "Delete", play_path(@play), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-custom" %>
+		<% end %>
+	<% end %>
+</div>
